[package]
name = "wmidi"
version = "4.0.0"
authors = ["wmedrano <will.s.medrano@gmail.com>"]
description = "Midi parsing library."
repository = "https://github.com/wmedrano/wmidi"
documentation = "https://docs.rs/wmidi"
license = "MIT"
keywords = ["midi", "music", "audio"]
readme = "README.md"

[lib]
# Required to pass flags to criterion benchmark.
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]

[dev-dependencies]
criterion = "0.3"

[features]
# Meta-features:
default = ["std"] # Without "std", wmidi uses libcore.
std = []

[[bench]]
name = "bench"
harness = false
