[package]
authors = ["wmedrano <will.s.medrano@gmail.com>"]
description = "Midi parsing library."
documentation = "https://docs.rs/wmidi"
keywords = ["midi", "music", "audio", "realtime", "real-time"]
license = "MIT"
name = "wmidi"
readme = "README.md"
repository = "https://github.com/RustAudio/wmidi"
version = "4.0.8"

[lib]
# Required to pass flags to criterion benchmark.
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]

[dev-dependencies]
criterion = "0.3"

[features]
# Meta-features:
default = ["std"] # Without "std", wmidi uses libcore.
std = []

[[bench]]
harness = false
name = "bench"
