[package]
authors = ["wmedrano <will.s.medrano@gmail.com>"]
description = "Midi parsing library."
documentation = "https://docs.rs/wmidi"
keywords = ["midi", "music", "audio", "realtime", "real-time"]
license = "MIT"
name = "wmidi"
readme = "README.md"
repository = "https://github.com/RustAudio/wmidi"
version = "4.0.10"

[lib]
# Required to pass flags to criterion benchmark.
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
defmt = { version = "0.3.5", optional = true }

[dev-dependencies]
criterion = "0.3"

[features]
# Meta-features:
default = ["std"] # Without "std", wmidi uses libcore.
std = []
defmt-03 = ["dep:defmt"]

[[bench]]
harness = false
name = "bench"
